# realtime-object-detection

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: config.yaml
docs/: technical_report_outline.md
notebooks/: 01_environment_and_model_setup.ipynb  02_dataset_and_coco_exploration.ipynb  03_single_frame_detection_and_visualisation.ipynb  04_video_inference_pipeline.ipynb  05_object_counting_logic.ipynb  06_model_benchmarking_latency_fps_memory.ipynb  07_model_size_comparison_nano_small_medium.ipynb  08_results_analysis_and_publication_figures.ipynb  09_streamlit_app_walkthrough.ipynb  README.md
reports/tables/: 05_count_summary.csv  05_count_summary.tex  06_benchmark_comparison.csv  06_benchmark_comparison.tex  07_final_model_comparison.csv  07_final_model_comparison.tex
scripts/: download_samples.py  run_all.py
src/detection_system/: __init__.py  benchmark.py  counting.py  inference.py  loader.py  utils.py  visualize.py
tests/: test_pipeline.py
