[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "realtime-object-detection"
version = "1.0.0"
description = "Real-Time Object Detection and Counting from Video Streams using YOLOv8"
authors = [{ name = "P. O. Adepoju" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["object-detection", "yolov8", "computer-vision", "real-time", "counting"]

dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "psutil>=5.9.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["detection_system"]
omit = ["tests/*", "scripts/*", "app/*"]
